<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/menu_period"
		android:showAsAction="always" />
	<item
	    android:id="@+id/menu_open"
	    android:icon="@drawable/content_graph"
	    android:showAsAction="always"
	    android:title="@string/text79"
	    android:visible="false" />
	<item
		android:id="@+id/menu_delete"
		android:icon="@drawable/content_delete_dark"
		android:showAsAction="ifRoom"
		android:title="@string/delete" />
	<item
		android:id="@+id/menu_refresh"
		android:icon="@drawable/navigation_refresh_dark"
		android:showAsAction="ifRoom"
		android:title="@string/menu_graph_refresh"/>
	<item
		android:id="@+id/menu_edit"
		android:icon="@drawable/content_edit_dark"
		android:showAsAction="ifRoom"
		android:title="@string/edit"/>

</menu>