<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center" >

		<LinearLayout
			android:id="@+id/buttonsContainer"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:gravity="center_horizontal"
			android:orientation="vertical"
			android:paddingBottom="30dp"
			android:paddingTop="30dp" >

			<Button
				android:id="@+id/graphsContainer"
				style="@style/ButtonText"
				android:layout_margin="20dp"
				android:background="@drawable/blue_button"
				android:drawableLeft="@drawable/ic_dr_graphs"
				android:drawablePadding="-15sp"
				android:gravity="center"
				android:text="@string/button_graphs" />

			<Button
				android:id="@+id/gridsContainer"
				style="@style/ButtonText"
				android:layout_margin="20dp"
				android:background="@drawable/blue_button"
				android:drawableLeft="@drawable/ic_dr_grid"
				android:drawablePadding="-15sp"
				android:gravity="center"
				android:text="@string/button_grid" />

			<Button
				android:id="@+id/labelsContainer"
				style="@style/ButtonText"
				android:layout_margin="20dp"
				android:background="@drawable/blue_button"
				android:drawableLeft="@drawable/ic_dr_labels"
				android:drawablePadding="-15sp"
				android:gravity="center"
				android:text="@string/button_labels" />

			<Button
				android:id="@+id/alertsContainer"
				style="@style/ButtonText"
				android:layout_margin="20dp"
				android:background="@drawable/blue_button"
				android:drawableLeft="@drawable/ic_dr_warning"
				android:drawablePadding="-15sp"
				android:gravity="center"
				android:text="@string/button_alerts" />

			<Button
				android:id="@+id/serverContainer"
				style="@style/ButtonText"
				android:layout_margin="20dp"
				android:background="@drawable/blue_button"
				android:drawableLeft="@drawable/ic_dr_servers"
				android:drawablePadding="-15sp"
				android:gravity="center"
				android:text="@string/button_server" />

			<Button
				android:id="@+id/notificationsContainer"
				style="@style/ButtonText"
				android:layout_margin="20dp"
				android:background="@drawable/blue_button"
				android:drawableLeft="@drawable/ic_dr_warning"
				android:drawablePadding="-15sp"
				android:gravity="center"
				android:text="@string/button_notifications" />

			<Button
				android:id="@+id/settingsContainer"
				style="@style/ButtonText"
				android:layout_margin="20dp"
				android:background="@drawable/blue_button"
				android:drawableLeft="@drawable/icon_settings"
				android:drawablePadding="-15sp"
				android:gravity="center"
				android:text="@string/button_settings" />

			<Button
				android:id="@+id/aboutContainer"
				style="@style/ButtonText"
				android:layout_margin="20dp"
				android:background="@drawable/blue_button"
				android:drawableLeft="@drawable/icon_about"
				android:drawablePadding="-15sp"
				android:gravity="center"
				android:text="@string/button_about" />

			<Button
				android:id="@+id/premiumContainer"
				style="@style/ButtonText"
				android:layout_margin="20dp"
				android:background="@drawable/blue_button"
				android:drawableLeft="@drawable/ic_dr_premium"
				android:drawablePadding="-15sp"
				android:gravity="center"
				android:text="@string/button_premium" />
		</LinearLayout>
	</ScrollView>

</LinearLayout>