<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/drawerView"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#34353C"
	android:orientation="vertical" >

	<!-- Search -->


	<!-- Do not remove this : important for focus clearing -->

	<View
		android:id="@+id/focusClearer"
		android:layout_width="0px"
		android:layout_height="0px"
		android:focusable="true"
		android:focusableInTouchMode="true" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="#1184C3"
		android:focusableInTouchMode="true"
		android:orientation="vertical"
		android:paddingBottom="5dp"
		android:paddingLeft="6dp"
		android:paddingRight="6dp"
		android:paddingTop="7dp" >

		<EditText
			android:id="@+id/drawer_search"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@null"
			android:drawableLeft="@drawable/drawer_search"
			android:drawableRight="@drawable/drawer_search_cancel"
			android:hint="@string/search"
			android:imeOptions="actionSearch"
			android:inputType="text|textNoSuggestions"
			android:paddingBottom="2dp"
			android:paddingLeft="5dp"
			android:paddingRight="5dp"
			android:paddingTop="2dp"
			android:textColor="#eeeeee"
			android:textColorHint="#aaeeeeee" />
	</LinearLayout>

	<ListView
		android:id="@+id/drawer_search_results"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone" />

	<ScrollView
		android:id="@+id/drawer_scrollview"
		android:layout_width="match_parent"
		android:layout_height="match_parent" >

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >

			<LinearLayout
				android:id="@+id/drawer_graphs_btn"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/drawer_dark_button"
				android:orientation="horizontal"
				android:padding="@dimen/item_padding" >

				<ImageView
					android:id="@+id/drawer_graphs_icon"
					style="@style/Drawer_Item_Icon"
					android:contentDescription="@string/button_graphs"
					android:src="@drawable/ic_dr_graphs" />

				<TextView
					android:id="@+id/drawer_graphs_txt"
					style="@style/Drawer_Item_Text"
					android:text="@string/button_graphs" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/drawer_containerPlugins"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="#2A2A30"
				android:minHeight="100dp"
				android:orientation="vertical"
				android:visibility="gone" >
			</LinearLayout>

			<LinearLayout
				android:id="@+id/drawer_grid_btn"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/drawer_dark_button"
				android:orientation="horizontal"
				android:padding="@dimen/item_padding" >

				<ImageView
					android:id="@+id/drawer_grid_icon"
					style="@style/Drawer_Item_Icon"
					android:contentDescription="@string/button_grid"
					android:src="@drawable/ic_dr_grid" />

				<TextView
					android:id="@+id/drawer_grid_txt"
					style="@style/Drawer_Item_Text"
					android:text="@string/button_grid" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/drawer_alerts_btn"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/drawer_dark_button"
				android:orientation="horizontal"
				android:padding="@dimen/item_padding" >

				<ImageView
					android:id="@+id/drawer_alerts_icon"
					style="@style/Drawer_Item_Icon"
					android:contentDescription="@string/button_alerts"
					android:src="@drawable/ic_dr_warning" />

				<TextView
					android:id="@+id/drawer_alerts_txt"
					style="@style/Drawer_Item_Text"
					android:text="@string/button_alerts" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/drawer_labels_btn"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/drawer_dark_button"
				android:orientation="horizontal"
				android:padding="@dimen/item_padding" >

				<ImageView
					android:id="@+id/drawer_labels_icon"
					style="@style/Drawer_Item_Icon"
					android:contentDescription="@string/button_labels"
					android:src="@drawable/ic_dr_labels" />

				<TextView
					android:id="@+id/drawer_labels_txt"
					style="@style/Drawer_Item_Text"
					android:text="@string/button_labels" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/drawer_servers_btn"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/drawer_dark_button"
				android:orientation="horizontal"
				android:padding="@dimen/item_padding" >

				<ImageView
					android:id="@+id/drawer_servers_icon"
					style="@style/Drawer_Item_Icon"
					android:contentDescription="@string/button_server"
					android:src="@drawable/ic_dr_servers" />

				<TextView
					android:id="@+id/drawer_servers_txt"
					style="@style/Drawer_Item_Text"
					android:text="@string/button_server" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/drawer_notifications_btn"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/drawer_dark_button"
				android:orientation="horizontal"
				android:padding="@dimen/item_padding" >

				<ImageView
					android:id="@+id/drawer_notifications_icon"
					style="@style/Drawer_Item_Icon"
					android:contentDescription="@string/button_notifications"
					android:src="@drawable/ic_dr_warning" />

				<TextView
					android:id="@+id/drawer_notifications_txt"
					style="@style/Drawer_Item_Text"
					android:text="@string/button_notifications" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/drawer_premium_btn"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/drawer_dark_button"
				android:orientation="horizontal"
				android:padding="@dimen/item_padding"
				android:visibility="gone" >

				<ImageView
					android:id="@+id/drawer_premium_icon"
					style="@style/Drawer_Item_Icon"
					android:contentDescription="@string/button_premium"
					android:src="@drawable/ic_dr_premium" />

				<TextView
					android:id="@+id/drawer_premium_txt"
					style="@style/Drawer_Item_Text"
					android:text="@string/button_premium" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/drawer_support_btn"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/drawer_dark_button"
				android:orientation="horizontal"
				android:padding="@dimen/small_item_padding" >

				<ImageView
					android:layout_width="20dp"
					android:layout_height="20dp"
					android:layout_gravity="center_vertical"
					android:layout_marginLeft="15dp"
					android:layout_marginRight="15dp"
					android:contentDescription="@string/support"
					android:src="@drawable/ic_action_help_trimmed" />

				<TextView
					android:id="@+id/drawer_support_txt"
					style="@style/Drawer_SmallItem_Text"
					android:text="@string/support" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/drawer_donate_btn"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/drawer_dark_button"
				android:orientation="horizontal"
				android:padding="@dimen/small_item_padding" >

				<ImageView
					android:layout_width="20dp"
					android:layout_height="20dp"
					android:layout_gravity="center_vertical"
					android:layout_marginLeft="15dp"
					android:layout_marginRight="15dp"
					android:contentDescription="@string/donate"
					android:src="@drawable/ic_action_favorite" />

				<TextView
					android:id="@+id/drawer_donate_txt"
					style="@style/Drawer_SmallItem_Text"
					android:text="@string/donate" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>

</LinearLayout>