<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scrollView1"
	android:layout_width="match_parent"
	android:layout_height="wrap_content" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/listview_horizontal_margin"
		android:layout_marginRight="@dimen/listview_horizontal_margin"
		android:orientation="vertical"
		android:paddingBottom="15dp" >

		<!-- APP OPTIONS -->

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="10dp"
			android:background="@drawable/card"
			android:orientation="vertical"
			android:padding="20dp" >

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:gravity="center"
				android:text="@string/settings_titlelabel_app"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textColor="#666666"
				android:textStyle="bold" />

			<!-- App language -->

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/settings_lang"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textStyle="bold" />

			<Spinner
				android:id="@+id/spinner_lang"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp" />

			<!-- Splash screen -->

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="15dp"
				android:text="@string/settings_splash_label"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textStyle="bold" />

			<LinearLayout
				android:id="@+id/checkable_splash"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="13dp"
				android:layout_marginTop="8dp"
				android:gravity="right"
				android:orientation="vertical" />

			<!-- Transitions -->

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="15dp"
				android:text="@string/settings_transitions_label"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textStyle="bold" />

			<LinearLayout
				android:id="@+id/checkable_transitions"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="13dp"
				android:layout_marginTop="8dp"
				android:gravity="right"
				android:orientation="vertical" />

			<!-- Drawer -->

			<TextView
				android:id="@+id/switch_drawer_tv"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="15dp"
				android:text="@string/settings_drawer_label"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textStyle="bold" />

			<LinearLayout
				android:id="@+id/checkable_drawer"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="13dp"
				android:layout_marginTop="8dp"
				android:gravity="right"
				android:orientation="vertical" />
		</LinearLayout>

		<!-- GRAPHS OPTIONS -->

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="15dp"
			android:background="@drawable/card"
			android:orientation="vertical"
			android:padding="20dp" >

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:gravity="center"
				android:text="@string/settings_titlelabel_graphs"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textColor="#666666"
				android:textStyle="bold" />

			<!-- Screen always on -->

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="15dp"
				android:text="@string/settings_screenalwayson_label"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textStyle="bold" />

			<LinearLayout
				android:id="@+id/checkable_screenalwayson"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="13dp"
				android:layout_marginTop="8dp"
				android:gravity="right"
				android:orientation="vertical" />

			<!-- Auto refresh -->

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="15dp"
				android:text="@string/settings_autorefresh_label"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textStyle="bold" />

			<LinearLayout
				android:id="@+id/checkable_autorefresh"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="13dp"
				android:layout_marginTop="8dp"
				android:gravity="right"
				android:orientation="vertical" />

			<!-- Graph default scale -->

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/settings_default_scale"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textStyle="bold" />

			<Spinner
				android:id="@+id/spinner_scale"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp" />

			<!-- Graphs screen orientation -->

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="15dp"
				android:text="@string/settings_graphview_orientation"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textStyle="bold" />

			<Spinner
				android:id="@+id/spinner_orientation"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp" />
		</LinearLayout>
	</LinearLayout>

</ScrollView>