<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:id="@+id/view1"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<TextView
			android:id="@+id/viewTitle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:background="#dedfde"
			android:gravity="center"
			android:padding="8dp"
			android:text="@string/notificationsTitle"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="#7a7a7a" />

		<LinearLayout
			android:id="@+id/viewTitleSep"
			android:layout_width="match_parent"
			android:layout_height="0.5dp"
			android:background="#a5a6a5"
			android:orientation="horizontal" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="15dp"
			android:background="#eaeaea" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:background="#ffffff"
			android:orientation="vertical"
			android:padding="20dp">

			<CheckBox
				android:id="@+id/checkbox_notifications"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:text="@string/text52" />

			<CheckBox
				android:id="@+id/checkbox_wifiOnly"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:text="@string/text53" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
				android:layout_marginTop="5dp"
				android:orientation="horizontal">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/text55" />

				<Spinner
					android:id="@+id/spinner_refresh"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="8dp" />
			</LinearLayout>

			<TextView
				android:id="@+id/estimated_data_consumption"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="6dp"
				android:layout_marginTop="3dp" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="2dp"
			android:layout_marginBottom="10dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:background="#d7d7d7" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="15dp"
			android:background="#eaeaea" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:background="#ffffff"
			android:orientation="vertical">

			<TextView
				android:id="@+id/btn_selectServersToWatch"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/alerts_hover"
				android:clickable="true"
				android:drawableRight="@drawable/arrow"
				android:focusable="true"
				android:gravity="center_vertical"
				android:padding="20dp"
				android:textColor="#333333"
				android:textSize="19sp"
				android:text="@string/text56" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="2dp"
			android:layout_marginBottom="10dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:background="#d7d7d7" />
	</LinearLayout>

	<ScrollView
		android:id="@+id/list_scrollview"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:visibility="gone">
		<LinearLayout
			android:id="@+id/list_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:visibility="gone"
			android:orientation="vertical" />
	</ScrollView>
	<!-- <ListView android:id="@+id/list" android:layout_width="match_parent" android:layout_height="match_parent" android:visibility="gone" android:background="#ffffff" /> -->

</RelativeLayout>